--- a/src/components/styles/WhatIDo.css
+++ b/src/components/styles/WhatIDo.css
@@ -6,10 +6,11 @@
   position: relative;
   opacity: 1;
   height: 100vh;
-  width: var(--cWidth);
+  width: 100%;
   max-width: 1920px;
   margin: auto;
   z-index: 9;
+  overflow: visible;
 }
 .what-box {
   width: 50%;
@@ -24,6 +25,10 @@
   font-weight: 600;
   margin-right: 10%;
   margin-bottom: 100px;
+  white-space: nowrap;
+  overflow: visible;
+  letter-spacing: 3px;
+  transform: translateX(-20px);
 }
 
 .hat-h2 {
@@ -35,7 +40,7 @@
 .what-box-in {
   flex-direction: column;
   height: 500px;
-  margin-left: 200px;
+  margin-left: 150px;
   position: relative;
   display: none;
 }
